--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -289,8 +289,8 @@ input[type="checkbox"].mark-check {
 }
 
 /* The next few rules are for toggling between expanded and collapsed
- * articles: the "item.tpl" and "item.js" set the <item which="...">
- * attribute to either "summary" or "content". This CSS determines
+ * articles: the "item.tpl" and "item.js" add the class "show-content"
+ * or "show-summary" to the content-panes element. This CSS determines
  * what to display in each case.
  */
 .content-panes[collapsible="no"] .expand-bar,
@@ -298,30 +298,28 @@ input[type="checkbox"].mark-check {
 	display:		none ! important;
 }
 
-/* This stuff (with the which= selector) should be considered to
- * work only for the initial view.
- */
-/*
-.content-panes[which="summary"] .item-summary,
-.content-panes[which="summary"] .expand-bar {
+/* Which items should be displayed and hidden... */
+/* ...when we're showing the summary */
+.content-panes.show-summary .item-summary,
+.content-panes.show-summary .expand-bar {
 	display:		block;
 }
 
-.content-panes[which="summary"] .item-content,
-.content-panes[which="summary"] .collapse-bar {
+.content-panes.show-summary .collapse-bar,
+.content-panes.show-summary .item-content {
 	display:		none;
 }
 
-.content-panes[which="content"] .item-summary,
-.content-panes[which="content"] .expand-bar {
+/* ...when we're showing the content */
+.content-panes.show-content .item-summary,
+.content-panes.show-content .expand-bar {
 	display:		none;
 }
 
-.content-panes[which="content"] .item-content,
-.content-panes[which="content"] .collapse-bar {
+.content-panes.show-content .collapse-bar,
+.content-panes.show-content .item-content {
 	display:		block;
 }
-*/
 
 /* Summary of item */
 .item-summary,
