--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -29,6 +29,10 @@ table#feeds tr.even-row {
 	background-color:	white;
 }
 
+table#feeds tr.inactive-feed {
+	background-color:	#c0c0c0 !important;
+}
+
 .tools {
 	margin-top:		1em;
 	margin-bottom:		1em;
