Display inactive and stale feeds. Added $STALE_DAYS config variable to define how long a feed must go without updates to be considered stale. db_get_feed(), db_get_feeds() now return a 'stale' field. 'feeds.last_updated' now represents the time when the most recent article was posted.

--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -29,8 +29,12 @@ table#feeds tr.even-row {
 	background-color:	white;
 }
 
-table#feeds tr.inactive-feed {
-	background-color:	#c0c0c0 !important;
+table#feeds tr.inactive-feed .title-col {
+	text-decoration:	line-through !important;
+}
+
+table#feeds tr.stale-feed {
+	background-color:	#808080 !important;
 }
 
 .tools {
