--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -34,7 +34,7 @@ table#feeds tr.inactive-feed .title-col {
 }
 
 table#feeds tr.stale-feed {
-	background-color:	#808080 !important;
+	background-color:	#a0a0a0 !important;
 }
 
 .tools {
