Start adding keyboard commands. view.js:init() adds an event listener for keyboard events. handle_key() decides what to do on keypress. Added collapse_all() and expand_all(). (efficiency) is_in_class() uses regexp matching rather than decomposing an element's class string into an array.
More specific CSS rules, to avoid collapsing/expanding things that
shouldn't.

--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -310,24 +310,24 @@ input[type="checkbox"].mark-check {
 
 /* Which items should be displayed and hidden... */
 /* ...when we're showing the summary */
-.content-panes.show-summary .item-summary,
-.content-panes.show-summary .expand-bar {
+.content-panes[collapsible="yes"].show-summary .item-summary,
+.content-panes[collapsible="yes"].show-summary .expand-bar {
 	display:		block;
 }
 
-.content-panes.show-summary .collapse-bar,
-.content-panes.show-summary .item-content {
+.content-panes[collapsible="yes"].show-summary .collapse-bar,
+.content-panes[collapsible="yes"].show-summary .item-content {
 	display:		none;
 }
 
 /* ...when we're showing the content */
-.content-panes.show-content .item-summary,
-.content-panes.show-content .expand-bar {
+.content-panes[collapsible="yes"].show-content .item-summary,
+.content-panes[collapsible="yes"].show-content .expand-bar {
 	display:		none;
 }
 
-.content-panes.show-content .collapse-bar,
-.content-panes.show-content .item-content {
+.content-panes[collapsible="yes"].show-content .collapse-bar,
+.content-panes[collapsible="yes"].show-content .item-content {
 	display:		block;
 }
 
