Toggling visibility of feed details/tools: instead of modifying each row, just toggle a class on the table, and let the changes propagate through CSS.

--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -38,8 +38,22 @@ table#feeds tr.stale-feed {
 }
 
 /* Hidden elements, or shown only selectively */
-.hidden {
+/* Feed details */
+#feeds .feed-details {
 	display:		none;
+}
+
+#feeds.show-details .feed-details {
+    	display:		inline;
+}
+
+/* Links to tools for managing feeds */
+#feeds .feed-tools {
+	display:		none;
+}
+
+#feeds.show-tools .feed-tools {
+	display:		inline;
 }
 
 .tools {
