--- a/htdocs/skins/wings/style.css
+++ b/htdocs/skins/wings/style.css
@@ -2,6 +2,13 @@
  */
 body {
 	background-color:	#e0e0e0;
+	background-image:	url(gray-bg.jpg);
+	margin-left:		0px;
+	margin-right:		0px;
+}
+
+body h1 {
+	text-align:		center;
 }
 
 /* Pages */
@@ -26,6 +33,7 @@ div.page#index-page {
 .feed-list li {
 	width:			100%;
 	background-color:	white;
+/*	background-color:	rgba(255,255,255,0.5);*/
 /*
 	outline:		2px solid blue;
 	outline-offset:		12px;
@@ -59,10 +67,12 @@ a.feed-name:hover {
 }
 
 /* Feed subtitle */
+/*
 #feed-page .feed-subtitle {
 	border:			1px dashed orange;
-	background-color:	yellow;
+	background-color:	cyan;
 }
+*/
 
 /* Descriptive blurb about the feed */
 #feed-page .feed-description {
