Added images. Moved gray-bg.jpg to "images". Adjust style.css accordingly.

--- a/htdocs/skins/wings/style.css
+++ b/htdocs/skins/wings/style.css
@@ -2,7 +2,7 @@
  */
 body {
 	background-color:	#e0e0e0;
-	background-image:	url(gray-bg.jpg);
+	background-image:	url(images/gray-bg.jpg);
 	margin-left:		0px;
 	margin-right:		0px;
 }
