--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -186,6 +186,7 @@ input[type="submit"] {
 /* Header box at top of item */
 .item-header {
 	width:			100%;
+	max-width:		100%;
 	background-color:	navy;
 	color:			cyan;
 	padding:		0px;
@@ -340,6 +341,8 @@ input[type="checkbox"].mark-check {
 /* Summary of item */
 .item-summary,
 .item-content {
+/*	width:			100%;*/
+	max-width:		100%;
 	border-top-width:	0px;
 	border-left-width:	2px;
 	border-right-width:	2px;
