Don't wrap tools column, for prettiness.

--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -63,6 +63,7 @@
 /* Links to tools for managing feeds */
 #feeds .feed-tools {
 	display:		none;
+	white-space:		nowrap;	/* Prevent ugly wrapping of image */
 }
 
 #feeds.show-tools .feed-tools {
