Detect orientation change (for mobile devices). On Android, put the check boxes on the side toward the bottom of the device, when in landscape mode.

--- a/htdocs/skins/fancy/android.css
+++ b/htdocs/skins/fancy/android.css
@@ -48,6 +48,33 @@ body {
 	width:	2.5em;
 }
 
+/* Which buttons should be visible in which orientation:
+ * orient:	left		right
+ * up		no		yes
+ * left		no		yes
+ * right	yes		no
+ * down		yes		no
+ */
+body[orientation="right"] .button-box-left,
+body[orientation="down"]  .button-box-left {
+	display:		table-cell;
+}
+
+body[orientation="right"] .button-box-right,
+body[orientation="down"]  .button-box-right {
+	display:		none;
+}
+
+body[orientation="up"]    .button-box-left,
+body[orientation="left"]  .button-box-left {
+	display:		none;
+}
+
+body[orientation="up"]    .button-box-right,
+body[orientation="left"]  .button-box-right {
+	display:		table-cell;
+}
+
 .item .mark-read {
 	display:		none;
 }
