--- a/htdocs/skins/fancy/ipad.css
+++ b/htdocs/skins/fancy/ipad.css
@@ -21,6 +21,10 @@ body {
 	border-bottom-color:	navy;
 }
 
+.button-box-left {
+	display:		table-cell;
+}
+
 .button-box input {
 	font-size:	16pt;
 	padding-left:	2px;
